--- a/web/admin.html
+++ b/web/admin.html
@@ -9769,6 +9769,18 @@ var _user$project$Main$viewMessage = function (msg) {
 			_1: {ctor: '[]'}
 		});
 };
+var _user$project$Main$styleTag = function () {
+	var styles = '\nbutton {\n  -webkit-border-radius: 6;\n  -moz-border-radius: 6;\n  border-radius: 6px;\n  font-family: Courier New;\n  color: #000000;\n  font-size: 20px;\n  background: #ffffff;\n  padding: 10px 20px 10px 20px;\n  border: solid #ff7373 2px;\n  text-decoration: none;\n}\n\nbutton:hover {\n  background: #546ff2;\n  text-decoration: none;\n}\n      ';
+	return A3(
+		_elm_lang$html$Html$node,
+		'style',
+		{ctor: '[]'},
+		{
+			ctor: '::',
+			_0: _elm_lang$html$Html$text(styles),
+			_1: {ctor: '[]'}
+		});
+}();
 var _user$project$Main$wsloc = function (loc) {
 	return A2(
 		_elm_lang$core$Basics_ops['++'],
@@ -9858,7 +9870,7 @@ var _user$project$Main$encodeOutMsg = function (msg) {
 							},
 							_1: {ctor: '[]'}
 						});
-				default:
+				case 'MainReel':
 					return _elm_lang$core$Json_Encode$object(
 						{
 							ctor: '::',
@@ -9869,6 +9881,25 @@ var _user$project$Main$encodeOutMsg = function (msg) {
 							},
 							_1: {ctor: '[]'}
 						});
+				default:
+					return _elm_lang$core$Json_Encode$object(
+						{
+							ctor: '::',
+							_0: {
+								ctor: '_Tuple2',
+								_0: 'type',
+								_1: _elm_lang$core$Json_Encode$string('offsetTime')
+							},
+							_1: {
+								ctor: '::',
+								_0: {
+									ctor: '_Tuple2',
+									_0: 'timeOffset',
+									_1: _elm_lang$core$Json_Encode$float(_p1._0)
+								},
+								_1: {ctor: '[]'}
+							}
+						});
 			}
 		}());
 };
@@ -9876,6 +9907,9 @@ var _user$project$Main$Model = F4(
 	function (a, b, c, d) {
 		return {messages: a, votes: b, passworded: c, location: d};
 	});
+var _user$project$Main$OffsetTime = function (a) {
+	return {ctor: 'OffsetTime', _0: a};
+};
 var _user$project$Main$MainReel = {ctor: 'MainReel'};
 var _user$project$Main$KitchenScene = {ctor: 'KitchenScene'};
 var _user$project$Main$Reset = {ctor: 'Reset'};
@@ -10018,26 +10052,13 @@ var _user$project$Main$view = function (model) {
 			_elm_lang$core$Basics_ops['++'],
 			{
 				ctor: '::',
-				_0: A2(
-					_elm_lang$html$Html$div,
-					{ctor: '[]'},
-					A2(_elm_lang$core$List$map, _user$project$Main$viewMessage, model.messages)),
+				_0: _user$project$Main$styleTag,
 				_1: {
 					ctor: '::',
 					_0: A2(
-						_elm_lang$html$Html$button,
-						{
-							ctor: '::',
-							_0: _elm_lang$html$Html_Events$onClick(
-								_user$project$Main$Send(
-									_user$project$Main$encodeOutMsg(_user$project$Main$Reset))),
-							_1: {ctor: '[]'}
-						},
-						{
-							ctor: '::',
-							_0: _elm_lang$html$Html$text('Reset'),
-							_1: {ctor: '[]'}
-						}),
+						_elm_lang$html$Html$div,
+						{ctor: '[]'},
+						A2(_elm_lang$core$List$map, _user$project$Main$viewMessage, model.messages)),
 					_1: {
 						ctor: '::',
 						_0: A2(
@@ -10046,12 +10067,12 @@ var _user$project$Main$view = function (model) {
 								ctor: '::',
 								_0: _elm_lang$html$Html_Events$onClick(
 									_user$project$Main$Send(
-										_user$project$Main$encodeOutMsg(_user$project$Main$KitchenScene))),
+										_user$project$Main$encodeOutMsg(_user$project$Main$Reset))),
 								_1: {ctor: '[]'}
 							},
 							{
 								ctor: '::',
-								_0: _elm_lang$html$Html$text('Kitchen Scene'),
+								_0: _elm_lang$html$Html$text('Reset'),
 								_1: {ctor: '[]'}
 							}),
 						_1: {
@@ -10062,12 +10083,12 @@ var _user$project$Main$view = function (model) {
 									ctor: '::',
 									_0: _elm_lang$html$Html_Events$onClick(
 										_user$project$Main$Send(
-											_user$project$Main$encodeOutMsg(_user$project$Main$MainReel))),
+											_user$project$Main$encodeOutMsg(_user$project$Main$KitchenScene))),
 									_1: {ctor: '[]'}
 								},
 								{
 									ctor: '::',
-									_0: _elm_lang$html$Html$text('MainReel'),
+									_0: _elm_lang$html$Html$text('Kitchen Scene'),
 									_1: {ctor: '[]'}
 								}),
 							_1: {
@@ -10078,28 +10099,12 @@ var _user$project$Main$view = function (model) {
 										ctor: '::',
 										_0: _elm_lang$html$Html_Events$onClick(
 											_user$project$Main$Send(
-												_user$project$Main$encodeOutMsg(
-													A2(
-														_user$project$Main$NextVote,
-														_user$project$Main$Show,
-														{
-															ctor: '::',
-															_0: 0,
-															_1: {
-																ctor: '::',
-																_0: 1,
-																_1: {
-																	ctor: '::',
-																	_0: 2,
-																	_1: {ctor: '[]'}
-																}
-															}
-														})))),
+												_user$project$Main$encodeOutMsg(_user$project$Main$MainReel))),
 										_1: {ctor: '[]'}
 									},
 									{
 										ctor: '::',
-										_0: _elm_lang$html$Html$text('Show Vote 1'),
+										_0: _elm_lang$html$Html$text('MainReel'),
 										_1: {ctor: '[]'}
 									}),
 								_1: {
@@ -10111,35 +10116,12 @@ var _user$project$Main$view = function (model) {
 											_0: _elm_lang$html$Html_Events$onClick(
 												_user$project$Main$Send(
 													_user$project$Main$encodeOutMsg(
-														A2(
-															_user$project$Main$NextVote,
-															_user$project$Main$Film,
-															{
-																ctor: '::',
-																_0: 1,
-																_1: {
-																	ctor: '::',
-																	_0: 2,
-																	_1: {
-																		ctor: '::',
-																		_0: 3,
-																		_1: {
-																			ctor: '::',
-																			_0: 4,
-																			_1: {
-																				ctor: '::',
-																				_0: 9,
-																				_1: {ctor: '[]'}
-																			}
-																		}
-																	}
-																}
-															})))),
+														_user$project$Main$OffsetTime(-10)))),
 											_1: {ctor: '[]'}
 										},
 										{
 											ctor: '::',
-											_0: _elm_lang$html$Html$text('Film Vote 1'),
+											_0: _elm_lang$html$Html$text('RW'),
 											_1: {ctor: '[]'}
 										}),
 									_1: {
@@ -10151,27 +10133,12 @@ var _user$project$Main$view = function (model) {
 												_0: _elm_lang$html$Html_Events$onClick(
 													_user$project$Main$Send(
 														_user$project$Main$encodeOutMsg(
-															A2(
-																_user$project$Main$NextVote,
-																_user$project$Main$Show,
-																{
-																	ctor: '::',
-																	_0: 2,
-																	_1: {
-																		ctor: '::',
-																		_0: 1,
-																		_1: {
-																			ctor: '::',
-																			_0: 0,
-																			_1: {ctor: '[]'}
-																		}
-																	}
-																})))),
+															_user$project$Main$OffsetTime(10)))),
 												_1: {ctor: '[]'}
 											},
 											{
 												ctor: '::',
-												_0: _elm_lang$html$Html$text('Show Vote 2'),
+												_0: _elm_lang$html$Html$text('FFW'),
 												_1: {ctor: '[]'}
 											}),
 										_1: {
@@ -10188,26 +10155,14 @@ var _user$project$Main$view = function (model) {
 																	_user$project$Main$Film,
 																	{
 																		ctor: '::',
-																		_0: 1,
+																		_0: 6,
 																		_1: {
 																			ctor: '::',
-																			_0: 2,
+																			_0: 7,
 																			_1: {
 																				ctor: '::',
-																				_0: 3,
-																				_1: {
-																					ctor: '::',
-																					_0: 4,
-																					_1: {
-																						ctor: '::',
-																						_0: 5,
-																						_1: {
-																							ctor: '::',
-																							_0: 9,
-																							_1: {ctor: '[]'}
-																						}
-																					}
-																				}
+																				_0: 8,
+																				_1: {ctor: '[]'}
 																			}
 																		}
 																	})))),
@@ -10215,7 +10170,7 @@ var _user$project$Main$view = function (model) {
 												},
 												{
 													ctor: '::',
-													_0: _elm_lang$html$Html$text('Film Vote 2'),
+													_0: _elm_lang$html$Html$text('Aspect ratios'),
 													_1: {ctor: '[]'}
 												}),
 											_1: {
@@ -10229,16 +10184,16 @@ var _user$project$Main$view = function (model) {
 																_user$project$Main$encodeOutMsg(
 																	A2(
 																		_user$project$Main$NextVote,
-																		_user$project$Main$Film,
+																		_user$project$Main$Show,
 																		{
 																			ctor: '::',
-																			_0: 6,
+																			_0: 0,
 																			_1: {
 																				ctor: '::',
-																				_0: 7,
+																				_0: 1,
 																				_1: {
 																					ctor: '::',
-																					_0: 8,
+																					_0: 2,
 																					_1: {ctor: '[]'}
 																				}
 																			}
@@ -10247,10 +10202,162 @@ var _user$project$Main$view = function (model) {
 													},
 													{
 														ctor: '::',
-														_0: _elm_lang$html$Html$text('Aspect ratios'),
+														_0: _elm_lang$html$Html$text('Show Vote 1'),
 														_1: {ctor: '[]'}
 													}),
-												_1: {ctor: '[]'}
+												_1: {
+													ctor: '::',
+													_0: A2(
+														_elm_lang$html$Html$button,
+														{
+															ctor: '::',
+															_0: _elm_lang$html$Html_Events$onClick(
+																_user$project$Main$Send(
+																	_user$project$Main$encodeOutMsg(
+																		A2(
+																			_user$project$Main$NextVote,
+																			_user$project$Main$Film,
+																			{
+																				ctor: '::',
+																				_0: 1,
+																				_1: {
+																					ctor: '::',
+																					_0: 2,
+																					_1: {
+																						ctor: '::',
+																						_0: 3,
+																						_1: {
+																							ctor: '::',
+																							_0: 4,
+																							_1: {
+																								ctor: '::',
+																								_0: 9,
+																								_1: {ctor: '[]'}
+																							}
+																						}
+																					}
+																				}
+																			})))),
+															_1: {ctor: '[]'}
+														},
+														{
+															ctor: '::',
+															_0: _elm_lang$html$Html$text('Film Vote 1'),
+															_1: {ctor: '[]'}
+														}),
+													_1: {
+														ctor: '::',
+														_0: A2(
+															_elm_lang$html$Html$button,
+															{
+																ctor: '::',
+																_0: _elm_lang$html$Html_Events$onClick(
+																	_user$project$Main$Send(
+																		_user$project$Main$encodeOutMsg(
+																			A2(
+																				_user$project$Main$NextVote,
+																				_user$project$Main$Show,
+																				{
+																					ctor: '::',
+																					_0: 2,
+																					_1: {
+																						ctor: '::',
+																						_0: 1,
+																						_1: {
+																							ctor: '::',
+																							_0: 0,
+																							_1: {ctor: '[]'}
+																						}
+																					}
+																				})))),
+																_1: {ctor: '[]'}
+															},
+															{
+																ctor: '::',
+																_0: _elm_lang$html$Html$text('Show Vote 2'),
+																_1: {ctor: '[]'}
+															}),
+														_1: {
+															ctor: '::',
+															_0: A2(
+																_elm_lang$html$Html$button,
+																{
+																	ctor: '::',
+																	_0: _elm_lang$html$Html_Events$onClick(
+																		_user$project$Main$Send(
+																			_user$project$Main$encodeOutMsg(
+																				A2(
+																					_user$project$Main$NextVote,
+																					_user$project$Main$Film,
+																					{
+																						ctor: '::',
+																						_0: 1,
+																						_1: {
+																							ctor: '::',
+																							_0: 2,
+																							_1: {
+																								ctor: '::',
+																								_0: 3,
+																								_1: {
+																									ctor: '::',
+																									_0: 4,
+																									_1: {
+																										ctor: '::',
+																										_0: 5,
+																										_1: {
+																											ctor: '::',
+																											_0: 9,
+																											_1: {ctor: '[]'}
+																										}
+																									}
+																								}
+																							}
+																						}
+																					})))),
+																	_1: {ctor: '[]'}
+																},
+																{
+																	ctor: '::',
+																	_0: _elm_lang$html$Html$text('Film Vote 2'),
+																	_1: {ctor: '[]'}
+																}),
+															_1: {
+																ctor: '::',
+																_0: A2(
+																	_elm_lang$html$Html$button,
+																	{
+																		ctor: '::',
+																		_0: _elm_lang$html$Html_Events$onClick(
+																			_user$project$Main$Send(
+																				_user$project$Main$encodeOutMsg(
+																					A2(
+																						_user$project$Main$NextVote,
+																						_user$project$Main$Film,
+																						{
+																							ctor: '::',
+																							_0: 6,
+																							_1: {
+																								ctor: '::',
+																								_0: 7,
+																								_1: {
+																									ctor: '::',
+																									_0: 8,
+																									_1: {ctor: '[]'}
+																								}
+																							}
+																						})))),
+																		_1: {ctor: '[]'}
+																	},
+																	{
+																		ctor: '::',
+																		_0: _elm_lang$html$Html$text('Aspect ratios'),
+																		_1: {ctor: '[]'}
+																	}),
+																_1: {ctor: '[]'}
+															}
+														}
+													}
+												}
 											}
 										}
 									}
