--- a/web/index.html
+++ b/web/index.html
@@ -9769,6 +9769,18 @@ var _user$project$Main$viewMessage = function (msg) {
 			_1: {ctor: '[]'}
 		});
 };
+var _user$project$Main$styleTag = function () {
+	var styles = '\nbutton {\n  -webkit-border-radius: 6;\n  -moz-border-radius: 6;\n  border-radius: 6px;\n  font-family: Courier New;\n  color: #000000;\n  font-size: 20px;\n  background: #ffffff;\n  padding: 10px 20px 10px 20px;\n  border: solid #ff7373 2px;\n  text-decoration: none;\n}\n\nbutton:hover, button:active {\n  background: #546ff2;\n  text-decoration: none;\n}\n\nbutton:disabled {\n  background: #cccccc;\n}\n      ';
+	return A3(
+		_elm_lang$html$Html$node,
+		'style',
+		{ctor: '[]'},
+		{
+			ctor: '::',
+			_0: _elm_lang$html$Html$text(styles),
+			_1: {ctor: '[]'}
+		});
+}();
 var _user$project$Main$wsloc = function (loc) {
 	return A2(
 		_elm_lang$core$Basics_ops['++'],
@@ -9830,9 +9842,9 @@ var _user$project$Main$voteType = function (vt) {
 		return 'Film';
 	}
 };
-var _user$project$Main$Model = F5(
-	function (a, b, c, d, e) {
-		return {messages: a, votes: b, password: c, connected: d, location: e};
+var _user$project$Main$Model = F6(
+	function (a, b, c, d, e, f) {
+		return {messages: a, votes: b, password: c, connected: d, location: e, votedNum: f};
 	});
 var _user$project$Main$Vote = function (a) {
 	return {ctor: 'Vote', _0: a};
@@ -9882,31 +9894,53 @@ var _user$project$Main$update = F2(
 	function (msg, model) {
 		var _p3 = msg;
 		switch (_p3.ctor) {
-			case 'Send':
+			case 'ChooseVote':
+				var _p4 = _p3._0;
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{
+							votedNum: _elm_lang$core$Maybe$Just(_p4)
+						}),
+					_1: A2(
+						_elm_lang$websocket$WebSocket$send,
+						_user$project$Main$wsloc(model.location),
+						_user$project$Main$encodeOutMsg(
+							_user$project$Main$Vote(_p4)))
+				};
+			case 'Connect':
 				return {
 					ctor: '_Tuple2',
 					_0: model,
 					_1: A2(
 						_elm_lang$websocket$WebSocket$send,
 						_user$project$Main$wsloc(model.location),
-						_p3._0)
+						_user$project$Main$encodeOutMsg(
+							_user$project$Main$Connecting(_p3._0)))
 				};
 			case 'NewMessage':
-				var _p5 = _p3._0;
-				var _p4 = _user$project$Main$decodeInMsg(_p5);
+				var _p8 = _p3._0;
+				var _p5 = _user$project$Main$decodeInMsg(_p8);
 				_v4_2:
 				do {
-					if (_p4.ctor === 'Ok') {
-						if (_p4._0.ctor === 'Votes') {
-							return {
-								ctor: '_Tuple2',
-								_0: _elm_lang$core$Native_Utils.update(
-									model,
-									{votes: _p4._0._0}),
-								_1: _elm_lang$core$Platform_Cmd$none
-							};
+					if (_p5.ctor === 'Ok') {
+						if (_p5._0.ctor === 'Votes') {
+							var _p7 = _p5._0._0;
+							var _p6 = _elm_lang$core$Native_Utils.eq(model.votes, _p7);
+							if (_p6 === true) {
+								return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
+							} else {
+								return {
+									ctor: '_Tuple2',
+									_0: _elm_lang$core$Native_Utils.update(
+										model,
+										{votes: _p7, votedNum: _elm_lang$core$Maybe$Nothing}),
+									_1: _elm_lang$core$Platform_Cmd$none
+								};
+							}
 						} else {
-							if (_p4._0._0 === true) {
+							if (_p5._0._0 === true) {
 								return {
 									ctor: '_Tuple2',
 									_0: _elm_lang$core$Native_Utils.update(
@@ -9927,7 +9961,7 @@ var _user$project$Main$update = F2(
 					_0: _elm_lang$core$Native_Utils.update(
 						model,
 						{
-							messages: {ctor: '::', _0: _p5, _1: model.messages}
+							messages: {ctor: '::', _0: _p8, _1: model.messages}
 						}),
 					_1: _elm_lang$core$Platform_Cmd$none
 				};
@@ -9951,6 +9985,9 @@ var _user$project$Main$update = F2(
 	});
 var _user$project$Main$Film = {ctor: 'Film'};
 var _user$project$Main$Show = {ctor: 'Show'};
+var _user$project$Main$ChooseVote = function (a) {
+	return {ctor: 'ChooseVote', _0: a};
+};
 var _user$project$Main$SetLocation = function (a) {
 	return {ctor: 'SetLocation', _0: a};
 };
@@ -9966,88 +10003,107 @@ var _user$project$Main$subscriptions = function (model) {
 		_user$project$Main$wsloc(model.location),
 		_user$project$Main$NewMessage);
 };
-var _user$project$Main$Send = function (a) {
-	return {ctor: 'Send', _0: a};
+var _user$project$Main$Connect = function (a) {
+	return {ctor: 'Connect', _0: a};
 };
 var _user$project$Main$init = function (loc) {
 	return {
 		ctor: '_Tuple2',
-		_0: A5(
+		_0: A6(
 			_user$project$Main$Model,
 			{ctor: '[]'},
 			{ctor: '[]'},
 			'',
 			false,
-			loc),
+			loc,
+			_elm_lang$core$Maybe$Nothing),
 		_1: A2(
 			_elm_lang$core$Task$perform,
-			_user$project$Main$Send,
-			_elm_lang$core$Task$succeed(
-				_user$project$Main$encodeOutMsg(
-					_user$project$Main$Connecting('password'))))
+			_user$project$Main$Connect,
+			_elm_lang$core$Task$succeed('password'))
 	};
 };
 var _user$project$Main$view = function (model) {
 	return A2(
 		_elm_lang$html$Html$div,
 		{ctor: '[]'},
-		function () {
-			var _p6 = model.connected;
-			if (_p6 === true) {
-				return A2(
-					_elm_lang$core$List$indexedMap,
-					F2(
-						function (i, t) {
-							return A2(
+		A2(
+			_elm_lang$core$Basics_ops['++'],
+			{
+				ctor: '::',
+				_0: _user$project$Main$styleTag,
+				_1: {ctor: '[]'}
+			},
+			function () {
+				var _p9 = model.connected;
+				if (_p9 === true) {
+					return A2(
+						_elm_lang$core$List$indexedMap,
+						F2(
+							function (i, t) {
+								return A2(
+									_elm_lang$html$Html$button,
+									A2(
+										_elm_lang$core$Basics_ops['++'],
+										{
+											ctor: '::',
+											_0: _elm_lang$html$Html_Events$onClick(
+												_user$project$Main$ChooseVote(i)),
+											_1: {ctor: '[]'}
+										},
+										{
+											ctor: '::',
+											_0: _elm_lang$html$Html_Attributes$disabled(
+												A2(
+													_elm_lang$core$Maybe$withDefault,
+													false,
+													A2(
+														_elm_lang$core$Maybe$map,
+														F2(
+															function (x, y) {
+																return !_elm_lang$core$Native_Utils.eq(x, y);
+															})(i),
+														model.votedNum))),
+											_1: {ctor: '[]'}
+										}),
+									{
+										ctor: '::',
+										_0: _elm_lang$html$Html$text(t),
+										_1: {ctor: '[]'}
+									});
+							}),
+						model.votes);
+				} else {
+					return {
+						ctor: '::',
+						_0: A2(
+							_elm_lang$html$Html$input,
+							{
+								ctor: '::',
+								_0: _elm_lang$html$Html_Events$onInput(_user$project$Main$Password),
+								_1: {ctor: '[]'}
+							},
+							{ctor: '[]'}),
+						_1: {
+							ctor: '::',
+							_0: A2(
 								_elm_lang$html$Html$button,
 								{
 									ctor: '::',
 									_0: _elm_lang$html$Html_Events$onClick(
-										_user$project$Main$Send(
-											_user$project$Main$encodeOutMsg(
-												_user$project$Main$Vote(i)))),
+										_user$project$Main$Connect(model.password)),
 									_1: {ctor: '[]'}
 								},
 								{
 									ctor: '::',
-									_0: _elm_lang$html$Html$text(t),
+									_0: _elm_lang$html$Html$text('connect'),
 									_1: {ctor: '[]'}
-								});
-						}),
-					model.votes);
-			} else {
-				return {
-					ctor: '::',
-					_0: A2(
-						_elm_lang$html$Html$input,
-						{
-							ctor: '::',
-							_0: _elm_lang$html$Html_Events$onInput(_user$project$Main$Password),
+								}),
 							_1: {ctor: '[]'}
-						},
-						{ctor: '[]'}),
-					_1: {
-						ctor: '::',
-						_0: A2(
-							_elm_lang$html$Html$button,
-							{
-								ctor: '::',
-								_0: _elm_lang$html$Html_Events$onClick(
-									_user$project$Main$Send(
-										_user$project$Main$encodeOutMsg(
-											_user$project$Main$Connecting(model.password)))),
-								_1: {ctor: '[]'}
-							},
-							{
-								ctor: '::',
-								_0: _elm_lang$html$Html$text('connect'),
-								_1: {ctor: '[]'}
-							}),
-						_1: {ctor: '[]'}
-					}
-				};
-			}
-		}());
+						}
+					};
+				}
+			}()));
 };
 var _user$project$Main$main = A2(
 	_elm_lang$navigation$Navigation$program,
